# opth_aicontest_classification

./: .gitignore  README.m  README.md  log.csv  pyproject.toml
log/210719-17:15_test/: log.csv
log/210719-19:03_test/: log.csv
log/210719-19:05_test/: log.csv
log/210720-15:14_vgg16/: log.csv
src/: Dataset.py  HistogramCompare.ipynb  Untitled.ipynb  config.py  contest_predict.py  evaluate.py  network.py  preprocessing.ipynb  run.py  tensor_test.ipynb  trainer.py  utils.py
