[tool.poetry]
name = "ls"
version = "0.1.0"
description = ""
authors = ["namihira33 <syuntakosu1011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
torch = "^1.9.0"
torchvision = "^0.10.0"
sklearn = "^0.0"
tqdm = "^4.61.2"
ipykernel = "^6.0.1"
skorch = "^0.10.0"
pandas = "^1.3.3"
seaborn = "^0.11.2"
tensorboardX = "^2.4"
tensorboard = "^2.6.0"
efficientnet-pytorch = "^0.7.1"
pytab = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
